--- a/Wizards.html
+++ b/Wizards.html
@@ -31,7 +31,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li>
-              <a href="Washington Sports.html">
+              <a href="index.html">
                 <i class="fa fa-home"></i>
                 Home
               </a>
