--- a/Redskins.html
+++ b/Redskins.html
@@ -60,7 +60,7 @@
         <div class="col-md-2 text-center">
           <p>
             <img src="images/dansnyder.jpg" height="120" width="120" >
-            <img src="images/rg3.jpg" height="120" width="120">
+            <img src="images/RG3.jpg" height="120" width="120">
             <img src="images/alberthaynesworth.jpg" height="120" width="120">
             <img src="images/redskinsfan.jpg" height="120" width="120">
           </p>
